# couchbase-odbc-driver

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt
cmake/: arch.cmake  get_version.py
cmake/Modules/: CBDeps.cmake  FindMDAC.cmake
contrib/: CMakeLists.txt  couchbase-odbc-driver-black-duck-manifest.yaml
dev/: DEV_README.md  sample_odbc.ini  sample_odbc_application.c  sample_odbcinst.ini
dev/basic_connection_via_libcouchbase/: 0.connect_to_analytics_without_ssl.cpp  1.connect_to_analytics_with_ssl.cpp  2.client_cert_auth.cpp  3.client_cert_auth_encrypted_key.cpp  4.connect_using_ldap.cpp  5.scaling_script.cpp  6.onnect_to_analytics_without_ssl.cpp  connect_to_analytics.py  useful_read.md
dev/sample_odbc_applications/: README.md  bind_param_array.c  bind_param_powerbi_demo.c  bind_params.c  browse_connect.c  describe_col.c  escape_sequence.c  foreign_keys.c  login_timeout.c  minimal_cba_connect.c  native_sql.c  primary_keys.c  procedure_columns.c  procedures.c  query_execution.c  sql_close_cursor.c  sql_columns.c  sql_copy_desc.c  sql_desc_field.c  sql_desc_rec.c  sql_diag_rec.c  sql_fetch_scroll.c  sql_get_connect_attribute.c  sql_get_diag_field.c  sql_get_env_attr.c  sql_get_functions.c  sql_get_info.c  sql_get_type_info.c  sql_param.c  sql_tables.c  utils.c  utils.h
driver/: CMakeLists.txt  connection.cpp  connection.h  descriptor.cpp  driver.cpp  result_set.cpp  result_set.h  statement.cpp  statement.h
driver/api/: odbc.cpp
driver/api/impl/: impl.cpp  queries.cpp  queries.h
driver/config/: config.cpp  config.h  ini_defines.h
driver/escaping/: escape_sequences.cpp  function_declare.h  lexer.cpp  lexer.h  lexer_declare.h
driver/escaping/include/: escape_sequences.h  lexer.h
driver/escaping/source/: escape_sequences.cpp  lexer.cpp
driver/format/: CBAS.cpp  CBAS.h  ODBCDriver2.h  RowBinaryWithNamesAndTypes.h
driver/format/include/: CBAS.h  ODBCDriver2.h  RowBinaryWithNamesAndTypes.h
driver/format/source/: CBAS.cpp  ODBCDriver2.cpp  RowBinaryWithNamesAndTypes.cpp
driver/include/: attributes.h  connection.h  descriptor.h  diagnostics.h  driver.h  environment.h  metadata.h  object.h  result_set.h  statement.h
driver/platform/: platform.h
driver/platform/win/: clickhouse-odbc.def  couchbase-odbcw.def  resource.h  resource.rc  setup.cpp
driver/source/: attributes.cpp  cJSON.c  connection.cpp  descriptor.cpp  diagnostics.cpp  driver.cpp  environment.cpp  exception.cpp  object.cpp  result_set.cpp  statement.cpp
driver/utils/: ieee_754_converter.cpp  lossless-adm_to_human-readable_format.cpp  lossless-adm_to_human-readable_format.h  type_info.cpp  type_info.h  utils.h
driver/utils/include/: WinReg_Value_Fetcher.h  amortized_istream_reader.h  conversion.h  conversion_context.h  conversion_icu.h  conversion_std.h  database_entity_support.h  folly_memory_UninitializedMemoryHacks.h  ieee_754_converter.h  lossless-adm_to_human-readable_format.h  resize_without_initialization.h  string_pool.h  type_info.h  unicode_converter.h  utils.h
driver/utils/source/: WinReg_Value_Fetcher.cpp  conversion_context.cpp  database_entity_support.cpp  ieee_754_converter.cpp  lossless-adm_to_human-readable_format.cpp  type_info.cpp  type_parser.cpp  unicode_converter.cpp
packaging/: License.rtf  RegConfig.patch.wxs  couchbase-odbc.tdc.sample  odbc-dsn.ini  odbc.ini.sample  odbcinst.ini.sample
